kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__compare_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 89
expression: "crate::tests::parsing_expr_string(r#\"a < !b >!1\"#)"
---
Node {
    node: Compare(
        Compare {
            left: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "a",
                        ],
                        pos: [
                            Node {
                                node: (),
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            ops: [
                Lt,
                Gt,
            ],
            comparators: [
                Node {
                    node: Unary(
                        UnaryExpr {
                            op: Not,
                            operand: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            "b",
                                        ],
                                        pos: [
                                            Node {
                                                node: (),
                                                filename: "",
                                                line: 1,
                                                column: 5,
                                                end_line: 1,
                                                end_column: 6,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 6,
                            },
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 6,
                },
                Node {
                    node: Unary(
                        UnaryExpr {
                            op: Not,
                            operand: Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 9,
                                end_line: 1,
                                end_column: 10,
                            },
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 8,
                    end_line: 1,
                    end_column: 10,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 10,
}

