kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__compare_recovery_3.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 91
expression: "crate::tests::parsing_expr_string(r#\"a <<< b\"#)"
---
Node {
    node: Compare(
        Compare {
            left: Node {
                node: Binary(
                    BinaryExpr {
                        left: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        "a",
                                    ],
                                    pos: [
                                        Node {
                                            node: (),
                                            filename: "",
                                            line: 1,
                                            column: 0,
                                            end_line: 1,
                                            end_column: 1,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                        op: Bin(
                            LShift,
                        ),
                        right: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 2,
                            end_line: 1,
                            end_column: 5,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 4,
            },
            ops: [
                Lt,
            ],
            comparators: [
                Node {
                    node: Identifier(
                        Identifier {
                            names: [
                                "b",
                            ],
                            pos: [
                                Node {
                                    node: (),
                                    filename: "",
                                    line: 1,
                                    column: 6,
                                    end_line: 1,
                                    end_column: 7,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 6,
                    end_line: 1,
                    end_column: 7,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}

