kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__compare_recovery_4.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 92
expression: "crate::tests::parsing_expr_string(r#\"a <+< b\"#)"
---
Node {
    node: Compare(
        Compare {
            left: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "a",
                        ],
                        pos: [
                            Node {
                                node: (),
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            ops: [
                Lt,
                Lt,
            ],
            comparators: [
                Node {
                    node: Unary(
                        UnaryExpr {
                            op: UAdd,
                            operand: Node {
                                node: Missing(
                                    MissingExpr,
                                ),
                                filename: "",
                                line: 1,
                                column: 3,
                                end_line: 1,
                                end_column: 5,
                            },
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 4,
                },
                Node {
                    node: Identifier(
                        Identifier {
                            names: [
                                "b",
                            ],
                            pos: [
                                Node {
                                    node: (),
                                    filename: "",
                                    line: 1,
                                    column: 6,
                                    end_line: 1,
                                    end_column: 7,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 6,
                    end_line: 1,
                    end_column: 7,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}

