kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_11.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 69
expression: "crate::tests::parsing_expr_string(\"{if True: a = , b = 2}\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: None,
                        value: Node {
                            node: ConfigIfEntry(
                                ConfigIfEntryExpr {
                                    if_cond: Node {
                                        node: NameConstantLit(
                                            NameConstantLit {
                                                value: True,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 4,
                                        end_line: 1,
                                        end_column: 8,
                                    },
                                    items: [
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    "a",
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 10,
                                                        end_line: 1,
                                                        end_column: 11,
                                                    },
                                                ),
                                                value: Node {
                                                    node: Missing(
                                                        MissingExpr,
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 12,
                                                    end_line: 1,
                                                    end_column: 15,
                                                },
                                                operation: Override,
                                                insert_index: -1,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 12,
                                            end_line: 1,
                                            end_column: 15,
                                        },
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Identifier(
                                                            Identifier {
                                                                names: [
                                                                    "b",
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 16,
                                                        end_line: 1,
                                                        end_column: 17,
                                                    },
                                                ),
                                                value: Node {
                                                    node: NumberLit(
                                                        NumberLit {
                                                            binary_suffix: None,
                                                            value: Int(
                                                                2,
                                                            ),
                                                        },
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 20,
                                                    end_line: 1,
                                                    end_column: 21,
                                                },
                                                operation: Override,
                                                insert_index: -1,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 20,
                                            end_line: 1,
                                            end_column: 21,
                                        },
                                        Node {
                                            node: ConfigEntry {
                                                key: Some(
                                                    Node {
                                                        node: Missing(
                                                            MissingExpr,
                                                        ),
                                                        filename: "",
                                                        line: 1,
                                                        column: 20,
                                                        end_line: 1,
                                                        end_column: 22,
                                                    },
                                                ),
                                                value: Node {
                                                    node: Missing(
                                                        MissingExpr,
                                                    ),
                                                    filename: "",
                                                    line: 1,
                                                    column: 20,
                                                    end_line: 1,
                                                    end_column: 22,
                                                },
                                                operation: Override,
                                                insert_index: -1,
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 20,
                                            end_line: 1,
                                            end_column: 22,
                                        },
                                    ],
                                    orelse: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 10,
                            end_line: 1,
                            end_column: 22,
                        },
                        operation: Union,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 22,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 22,
}

